syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "ProductProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// flat-ent: Product
message ProductFlatData {
    option (routines.entity_type) = "Product";
    option (routines.keys).keys = "product_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productId
    string product_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string product_type_id = 2 [(routines.opts).field_type = "id"];
    string primary_product_category_id = 3 [(routines.opts).field_type = "id"];
    string facility_id = 4 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp introduction_date = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp release_date = 6 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp support_discontinuation_date = 7 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp sales_discontinuation_date = 8 [(routines.opts).field_type = "date-time"];
    routines.Indicator sales_disc_when_not_avail = 9 [(routines.opts).field_type = "indicator"];
    string internal_name = 10 [(routines.opts).field_type = "description"];
    string brand_name = 11 [(routines.opts).field_type = "name"];
    string comments = 12 [(routines.opts).field_type = "comment"];
    string product_name = 13 [(routines.opts).field_type = "name"];
    string description = 14 [(routines.opts).field_type = "description"];
    string long_description = 15 [(routines.opts).field_type = "very-long"];
    string price_detail_text = 16 [(routines.opts).field_type = "description"];
    string small_image_url = 17 [(routines.opts).field_type = "url"];
    string medium_image_url = 18 [(routines.opts).field_type = "url"];
    string large_image_url = 19 [(routines.opts).field_type = "url"];
    string detail_image_url = 20 [(routines.opts).field_type = "url"];
    string original_image_url = 21 [(routines.opts).field_type = "url"];
    string detail_screen = 22 [(routines.opts).field_type = "long-varchar"];
    string inventory_message = 23 [(routines.opts).field_type = "description"];
    string inventory_item_type_id = 24 [(routines.opts).field_type = "id"];
    routines.Indicator require_inventory = 25 [(routines.opts).field_type = "indicator"];
    string quantity_uom_id = 26 [(routines.opts).field_type = "id"];
    routines.FixedPoint quantity_included = 27 [(routines.opts).field_type = "fixed-point"];
    int64 pieces_included = 28 [(routines.opts).field_type = "numeric"];
    routines.Indicator require_amount = 29 [(routines.opts).field_type = "indicator"];
    routines.Currency fixed_amount = 30 [(routines.opts).field_type = "currency-amount"];
    string amount_uom_type_id = 31 [(routines.opts).field_type = "id"];
    string weight_uom_id = 32 [(routines.opts).field_type = "id"];
    routines.FixedPoint shipping_weight = 33 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint product_weight = 34 [(routines.opts).field_type = "fixed-point"];
    string height_uom_id = 35 [(routines.opts).field_type = "id"];
    routines.FixedPoint product_height = 36 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint shipping_height = 37 [(routines.opts).field_type = "fixed-point"];
    string width_uom_id = 38 [(routines.opts).field_type = "id"];
    routines.FixedPoint product_width = 39 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint shipping_width = 40 [(routines.opts).field_type = "fixed-point"];
    string depth_uom_id = 41 [(routines.opts).field_type = "id"];
    routines.FixedPoint product_depth = 42 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint shipping_depth = 43 [(routines.opts).field_type = "fixed-point"];
    string diameter_uom_id = 44 [(routines.opts).field_type = "id"];
    routines.FixedPoint product_diameter = 45 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint product_rating = 46 [(routines.opts).field_type = "fixed-point"];
    string rating_type_enum = 47 [(routines.opts).field_type = "id"];
    routines.Indicator returnable = 48 [(routines.opts).field_type = "indicator"];
    routines.Indicator taxable = 49 [(routines.opts).field_type = "indicator"];
    routines.Indicator charge_shipping = 50 [(routines.opts).field_type = "indicator"];
    routines.Indicator auto_create_keywords = 51 [(routines.opts).field_type = "indicator"];
    routines.Indicator include_in_promotions = 52 [(routines.opts).field_type = "indicator"];
    routines.Indicator is_virtual = 53 [(routines.opts).field_type = "indicator"];
    routines.Indicator is_variant = 54 [(routines.opts).field_type = "indicator"];
    string virtual_variant_method_enum = 55 [(routines.opts).field_type = "id"];
    string origin_geo_id = 56 [(routines.opts).field_type = "id"];
    string requirement_method_enum_id = 57 [(routines.opts).field_type = "id"];
    int64 bill_of_material_level = 58 [(routines.opts).field_type = "numeric"];
    routines.FixedPoint reserv_max_persons = 59 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint reserv_2nd_p_p_perc = 60 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint reserv_nth_p_p_perc = 61 [(routines.opts).field_type = "fixed-point"];
    string config_id = 62 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp created_date = 63 [(routines.opts).field_type = "date-time"];
    string created_by_user_login = 64 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp last_modified_date = 65 [(routines.opts).field_type = "date-time"];
    string last_modified_by_user_login = 66 [(routines.opts).field_type = "id-vlong"];
    routines.Indicator in_shipping_box = 67 [(routines.opts).field_type = "indicator"];
    string default_shipment_box_type_id = 68 [(routines.opts).field_type = "id"];
    string lot_id_filled_in = 69 [(routines.opts).field_type = "long-varchar"];
    routines.Indicator order_decimal_quantity = 70 [(routines.opts).field_type = "indicator"];
    google.protobuf.Timestamp last_updated_tx_stamp = 71 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 72 [(routines.opts).field_type = "date-time"];
    string tenant_id = 73 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 158;
    map<string, google.protobuf.Any> attachments = 159 ;
}

message ProductKey{
    string product_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message ProductList{
    repeated ProductFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListProducts` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// Product Association
message ProductAssocData {
    option (routines.entity_type) = "ProductAssoc";
    option (routines.keys).keys = "product_id, product_id_to, product_assoc_type_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productId, productIdTo, productAssocTypeId, fromDate
    // fields
    string product_id = 1 [(routines.opts).field_type = "id"];
    string product_id_to = 2 [(routines.opts).field_type = "id"];
    string product_assoc_type_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 5 [(routines.opts).field_type = "date-time"];
    int64 sequence_num = 6 [(routines.opts).field_type = "numeric"];
    string reason = 7 [(routines.opts).field_type = "long-varchar"];
    routines.FixedPoint quantity = 8 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint scrap_factor = 9 [(routines.opts).field_type = "fixed-point"];
    string instruction = 10 [(routines.opts).field_type = "long-varchar"];
    string routing_work_effort_id = 11 [(routines.opts).field_type = "id"];
    string estimate_calc_method = 12 [(routines.opts).field_type = "id"];
    string recurrence_info_id = 13 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 14 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 15 [(routines.opts).field_type = "date-time"];
    string id = 16 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 23;
    map<string, google.protobuf.Any> attachments = 24;
}


message ProductAssocKey{
    string product_id = 1 [(routines.opts).field_type = "id"];
    string product_id_to = 2 [(routines.opts).field_type = "id"];
    string product_assoc_type_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 4 [(routines.opts).field_type = "date-time"];
}

message ProductAssocList{
    repeated ProductAssocData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListProductAssocs` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Product Data Object
message ProductContentData {
    option (routines.entity_type) = "ProductContent";
    option (routines.keys).keys = "product_id, content_id, product_content_type_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productId, contentId, productContentTypeId, fromDate
    // fields
    string product_id = 1 [(routines.opts).field_type = "id"];
    string content_id = 2 [(routines.opts).field_type = "id"];
    string product_content_type_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp purchase_from_date = 6 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp purchase_thru_date = 7 [(routines.opts).field_type = "date-time"];
    int64 use_count_limit = 8 [(routines.opts).field_type = "numeric"];
    int64 use_time = 9 [(routines.opts).field_type = "numeric"];
    string use_time_uom_id = 10 [(routines.opts).field_type = "id"];
    string use_role_type_id = 11 [(routines.opts).field_type = "id"];
    int64 sequence_num = 12 [(routines.opts).field_type = "numeric"];
    google.protobuf.Timestamp last_updated_tx_stamp = 13 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 14 [(routines.opts).field_type = "date-time"];
    string id = 15 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 21;
    map<string, google.protobuf.Any> attachments = 22;
}


message ProductContentKey{
    string product_id = 1 [(routines.opts).field_type = "id"];
    string content_id = 2 [(routines.opts).field_type = "id"];
    string product_content_type_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 4 [(routines.opts).field_type = "date-time"];
}

message ProductContentList{
    repeated ProductContentData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListProductContents` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Product Keyword
message ProductKeywordData {
    option (routines.entity_type) = "ProductKeyword";
    option (routines.keys).keys = "product_id, keyword, keyword_type_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productId, keyword, keywordTypeId
    // fields
    string product_id = 1 [(routines.opts).field_type = "id"];
    string keyword = 2 [(routines.opts).field_type = "short-varchar"];
    string keyword_type_id = 3 [(routines.opts).field_type = "id"];
    int64 relevancy_weight = 4 [(routines.opts).field_type = "numeric"];
    string status_id = 5 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 7 [(routines.opts).field_type = "date-time"];
    string id = 8 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 12;
    map<string, google.protobuf.Any> attachments = 13;
}


message ProductKeywordKey{
    string product_id = 1 [(routines.opts).field_type = "id"];
    string keyword = 2 [(routines.opts).field_type = "short-varchar"];
    string keyword_type_id = 3 [(routines.opts).field_type = "id"];
}

message ProductKeywordList{
    repeated ProductKeywordData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListProductKeywords` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// flat-ent: Product Review
message ProductReviewFlatData {
    option (routines.entity_type) = "ProductReview";
    option (routines.keys).keys = "product_review_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productReviewId
    string product_review_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string product_store_id = 2 [(routines.opts).field_type = "id"];
    string product_id = 3 [(routines.opts).field_type = "id"];
    string user_login_id = 4 [(routines.opts).field_type = "id-vlong"];
    string status_id = 5 [(routines.opts).field_type = "id"];
    routines.Indicator posted_anonymous = 6 [(routines.opts).field_type = "indicator"];
    google.protobuf.Timestamp posted_date_time = 7 [(routines.opts).field_type = "date-time"];
    routines.FixedPoint product_rating = 8 [(routines.opts).field_type = "fixed-point"];
    string product_review = 9 [(routines.opts).field_type = "very-long"];
    google.protobuf.Timestamp last_updated_tx_stamp = 10 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 11 [(routines.opts).field_type = "date-time"];
    string tenant_id = 12 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 18;
    map<string, google.protobuf.Any> attachments = 19 ;
}

message ProductReviewKey{
    string product_review_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message ProductReviewList{
    repeated ProductReviewFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListProductReviews` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

